@@ -16,6 +16,7 @@
   <Contents>
     <File name="NewLineLiteralTest.cs" subtype="Code" buildaction="Compile" />
     <File name="FeatureRequiresRootPrivilegeOnUnixTest.cs" subtype="Code" buildaction="Compile" />
+    <File name="MonoCompatibilityReviewTest.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Project" localcopy="True" refto="Gendarme.Rules.Portability" />
